cabal-version:      2.2
name:               hstream-processing
version:            0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on GitHub at
  <https://github.com/hstreamdb/hstream#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:             Bin Wang
maintainer:         wangbin@emqx.io
category:           Streaming
homepage:           https://github.com/hstreamdb/hstream
bug-reports:        https://github.com/hstreamdb/hstream/issues
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/hstreamdb/hstream

flag ReleaseBuild
  default:     False
  description:
    Enables all optimisations, leads to slower build time and better performance

common shared-properties
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

  if flag(releasebuild)
    ghc-options:
      -feager-blackholing -flate-dmd-anal -flate-specialise
      -fspec-constr-keen -fstatic-argument-transformation
      -funbox-strict-fields -O2

library
  import:           shared-properties
  exposed-modules:
    HStream.Processing.Connector
    HStream.Processing.Encoding
    HStream.Processing.Error
    HStream.Processing.MockStreamStore
    HStream.Processing.Processor
    HStream.Processing.Processor.Internal
    HStream.Processing.Store
    HStream.Processing.Stream
    HStream.Processing.Stream.GroupedStream
    HStream.Processing.Stream.Internal
    HStream.Processing.Stream.JoinWindows
    HStream.Processing.Stream.SessionWindowedStream
    HStream.Processing.Stream.SessionWindows
    HStream.Processing.Stream.TimeWindowedStream
    HStream.Processing.Stream.TimeWindows
    HStream.Processing.Table
    HStream.Processing.Type
    HStream.Processing.Util

  hs-source-dirs:   src
  build-depends:
    , aeson
    , base                  >=4.11 && <5
    , binary
    , bytestring
    , data-default
    , hstream-api-hs
    , hstream-common-base
    , rio
    , scientific
    , template-haskell
    , time
    , unordered-containers

  -- hstream-store
  default-language: Haskell2010

--executable processor-example0
--  import:           shared-properties
--  main-is:          ProcessorExample0.hs
--  hs-source-dirs:   example
--  build-depends:
--    , aeson
--    , base                >=4.11 && <5
--    , hstream-processing
--    , random
--    , rio
--    , text
--  default-language: Haskell2010

-- executable processor-example1
--   import:           shared-properties
--   main-is:          ProcessorExample1.hs
--   hs-source-dirs:   example
--   build-depends:
--     , aeson
--     , base                >=4.11 && <5
--     , binary
--     , hstream-processing
--     , random
--     , rio
--     , text
--
--   default-language: Haskell2010
--
-- executable stream-example0
--   import:           shared-properties
--   main-is:          StreamExample0.hs
--   hs-source-dirs:   example
--   build-depends:
--     , aeson
--     , base                >=4.11 && <5
--     , binary
--     , bytestring
--     , hstream-processing
--     , random
--     , rio
--     , text
--
--   default-language: Haskell2010
--
-- executable stream-example1
--   import:           shared-properties
--   main-is:          StreamExample1.hs
--   hs-source-dirs:   example
--   build-depends:
--     , aeson
--     , base                >=4.11 && <5
--     , binary
--     , bytestring
--     , hstream-processing
--     , random
--     , rio
--     , text
--
--   default-language: Haskell2010
--
-- executable stream-example2
--   import:           shared-properties
--   main-is:          StreamExample2.hs
--   hs-source-dirs:   example
--   build-depends:
--     , aeson
--     , base                >=4.11 && <5
--     , binary
--     , bytestring
--     , hstream-processing
--     , random
--     , rio
--     , text
--
--   default-language: Haskell2010
--
-- executable stream-example3
--   import:           shared-properties
--   main-is:          StreamExample3.hs
--   hs-source-dirs:   example
--   build-depends:
--     , aeson
--     , base                >=4.11 && <5
--     , binary
--     , bytestring
--     , hstream-processing
--     , random
-- --     , rio
--     , text
--
--   default-language: Haskell2010
--
-- executable stream-example4
--   import:           shared-properties
--   main-is:          StreamExample4.hs
--   hs-source-dirs:   example
--   build-depends:
--     , aeson
--     , base                >=4.11 && <5
--     , binary
--     , bytestring
--     , hstream-processing
--     , random
--     , rio
--     , text
--
--   default-language: Haskell2010
--
-- executable stream-example5
--   import:           shared-properties
--   main-is:          StreamExample5.hs
--   hs-source-dirs:   example
--   build-depends:
--     , aeson
--     , base                >=4.11 && <5
--     , binary
--     , bytestring
--     , hstream-processing
--     , random
--     , rio
--     , text
--
--   default-language: Haskell2010
