cabal-version:      2.2
name:               hstream-server
version:            0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on Github at
  <https://github.com/hstreamdb/hstream#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:             Bin Wang
maintainer:         wangbin@emqx.io
tested-with:        GHC ==8.8.4 || ==8.10.4
category:           Database
homepage:           https://github.com/hstreamdb/hstream
bug-reports:        https://github.com/hstreamdb/hstream/issues
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    HStream.Server.Handler
    HStream.Server.HStoreConnector
    HStream.Server.HStreamApi
    HStream.Server.Utils
    ThirdParty.Google.Protobuf.Struct

  other-modules:
  hs-source-dirs:   src generated-src
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , deepseq
    , grpc-haskell
    , grpc-haskell-core
    , hstream-processing
    , hstream-sql
    , hstream-store
    , proto3-suite
    , proto3-wire
    , random
    , rio
    , scientific
    , text
    , time
    , unordered-containers
    , vector
    , Z-Data
    , Z-IO

  hs-source-dirs:   app generated-src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

executable hstream-server
  main-is:          Server.hs
  build-depends:
    , base
    , bytestring
    , containers
    , deepseq
    , grpc-haskell
    , grpc-haskell-core
    , hstream-server
    , optparse-applicative
    , proto3-suite
    , proto3-wire
    , text
    , vector
    , Z-Data
    , Z-IO

  hs-source-dirs:   app
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N

  default-language: Haskell2010
