cabal-version:      2.2
name:               hstream-sql
version:            0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on GitHub at
  <https://github.com/hstream-io/hstream#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:             Feng Lee <feng@emqx.io>
maintainer:         maosics@gmail.com
tested-with:        GHC ==8.10.4
category:           Language
homepage:           https://github.com/hstream-io/hstream
bug-reports:        https://github.com/hstream-io/hstream/issues
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/hstreamdb/hstream

flag ReleaseBuild
  default:     False
  description:
    Enables all optimisations, leads to slower build time and better performance

common shared-properties
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

  if flag(releasebuild)
    ghc-options:
      -feager-blackholing -flate-dmd-anal -flate-specialise
      -fspec-constr-keen -fstatic-argument-transformation
      -funbox-strict-fields -O2

library
  import:             shared-properties
  exposed-modules:
    HStream.SQL
    HStream.SQL.Abs
    HStream.SQL.AST
    HStream.SQL.Codegen
    HStream.SQL.Exception
    HStream.SQL.Internal.Validate
    HStream.SQL.Codegen.UnaryOp
    HStream.SQL.Codegen.BinOp
    HStream.SQL.Codegen.JsonOp
    HStream.SQL.Codegen.SKey
    HStream.SQL.Codegen.Utils
    HStream.SQL.Parse

  other-modules:
    HStream.SQL.ErrM
    HStream.SQL.Extra
    HStream.SQL.Lex
    HStream.SQL.Par
    HStream.SQL.Preprocess
    HStream.SQL.Print
    HStream.SQL.Validate.Utils

  hs-source-dirs:     src gen-sql
  build-depends:
    , aeson
    , array
    , base                  >=4.11  && <5
    , binary
    , bytestring            ^>=0.10
    , containers
    , diff-flow
    , extra
    , hstream-common
    , mysql-haskell
    , proto3-suite
    , rio
    , scientific
    , string-random
    , text                  ^>=1.2
    , time                  >=1.9.1 && <2
    , unordered-containers
    , uuid
    , vector
    , Z-Data
    , Z-IO
    , hashable
    , time-compat

  -- Note: build on osx may require this
  -- alex == 3.2.7 will fail to build language-c, see: https://github.com/simonmar/alex/issues/197
  build-tool-depends: alex:alex ==3.2.6, happy:happy -any
  default-language:   Haskell2010

-- executable sql-example-mock
--   import:           shared-properties
--   main-is:          Example.hs
--   hs-source-dirs:   sql-example-mock
--   build-depends:
--     , aeson
--     , base
--     , hstream-processing
--     , hstream-sql
--     , random
--     , rio
--     , scientific
--     , text
--     , unordered-containers
--
--   default-language: Haskell2010

test-suite hstream-sql-test
  import:             shared-properties
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    HStream.SQL.Codegen.ArraySpec
    HStream.SQL.Codegen.MathSpec
    HStream.SQL.ParseRefineSpec
    HStream.SQL.ValidateSpec

  hs-source-dirs:     test
  build-depends:
    , aeson
    , base                  >=4.11 && <5
    , bytestring
    , containers
    , hspec
    , hstream-common
    , hstream-sql
    , HUnit
    , random                ^>=1.2
    , scientific
    , text
    , unordered-containers
    , vector
    , Z-Data

  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover ==2.*
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
