cabal-version:      2.2
name:               hstream-store
version:            0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on GitHub at
  <https://github.com/hstreamdb/hstream#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:             Feng Lee <feng@emqx.io>
maintainer:         lambda@emqx.io
tested-with:        GHC ==8.10.4
category:           Database
homepage:           https://github.com/hstreamdb/hstream
bug-reports:        https://github.com/hstreamdb/hstream/issues
build-type:         Custom
extra-source-files:
  ChangeLog.md
  include/ghc_ext.h
  include/hs_logdevice.h
  README.md

custom-setup
  setup-depends:
    , base   >=4.5 && <5
    , Cabal  >=2.4 && <4

source-repository head
  type:     git
  location: https://github.com/hstreamdb/hstream

flag ReleaseBuild
  default:     False
  description:
    Enables all optimisations, leads to slower build time and better performance

common shared-properties
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

  if flag(releasebuild)
    ghc-options:
      -feager-blackholing -flate-dmd-anal -flate-specialise
      -fspec-constr-keen -fstatic-argument-transformation
      -funbox-strict-fields -O2

library
  import:             shared-properties
  exposed-modules:
    HStream.Store
    HStream.Store.Internal.LogDevice
    HStream.Store.Logger

  other-modules:
    HStream.Store.Exception
    HStream.Store.Internal.Foreign
    HStream.Store.Internal.LogDevice.Checkpoint
    HStream.Store.Internal.LogDevice.Configuration
    HStream.Store.Internal.LogDevice.LDQuery
    HStream.Store.Internal.LogDevice.LogAttributes
    HStream.Store.Internal.LogDevice.LogConfigTypes
    HStream.Store.Internal.LogDevice.Reader
    HStream.Store.Internal.LogDevice.VersionedConfigStore
    HStream.Store.Internal.LogDevice.Writer
    HStream.Store.Internal.Types
    HStream.Store.Stream

  build-depends:
    , base                 >=4.13   && <5
    , bytestring           >=0.10   && <0.12
    , cache                ^>=0.1
    , containers           ^>=0.6
    , data-default         ^>=0.7
    , ghc-prim             >=0.5    && <1.0
    , hashable             ^>=1.3.5
    , hstream-common-base
    , primitive            ^>=0.7
    , random               ^>=1.2
    , time                 >=1.9    && <2.0
    , vector               ^>=0.12
    , Z-Data
    , Z-IO

  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnliftedFFITypes

  extra-libraries:
    stdc++
    folly
    logdevice
    ldquery
    thriftcpp2
    thriftprotocol
    glog
    boost_context

  cxx-options:        -std=c++17
  cpp-options:        -std=c++17
  cxx-sources:
    cbits/hs_logdevice.cpp
    cbits/logdevice/hs_checkpoint.cpp
    cbits/logdevice/hs_ldquery.cpp
    cbits/logdevice/hs_log_attributes.cpp
    cbits/logdevice/hs_logconfigtypes.cpp
    cbits/logdevice/hs_reader.cpp
    cbits/logdevice/hs_versioned_config_store.cpp
    cbits/logdevice/hs_writer.cpp
    cbits/logdevice/ld_configuration.cpp
    cbits/utils.cpp

  extra-lib-dirs:     /usr/local/lib
  includes:           hs_logdevice.h
  include-dirs:       include /usr/local/include
  build-tool-depends:
    , cpphs:cpphs    >=1.20 && <1.21
    , hsc2hs:hsc2hs

test-suite hstream-store-test
  import:             shared-properties
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    HStream.Store.CheckpointStoreSpec
    HStream.Store.LogDeviceSpec
    HStream.Store.ReaderSpec
    HStream.Store.SettingsSpec
    HStream.Store.SpecUtils
    HStream.Store.StreamSpec
    HStream.Store.WriterSpec
    HStream.StoreSpec

  hs-source-dirs:     test
  build-depends:
    , base                  >=4.11    && <5
    , bytestring
    , containers            ^>=0.6
    , data-default          ^>=0.7
    , hspec
    , hstream-store
    , QuickCheck
    , quickcheck-instances  ^>=0.3.20
    , random                ^>=1.2
    , vector                ^>=0.12
    , Z-Data
    , Z-IO

  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnliftedFFITypes

  build-tool-depends: hspec-discover:hspec-discover >=2 && <3
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N

benchmark hstore-bench-append
  import:             shared-properties
  type:               exitcode-stdio-1.0
  main-is:            AppendBench.hs
  hs-source-dirs:     bench
  build-depends:
    , base                  >=4.11  && <5
    , bytestring
    , byteunits             ^>=0.4
    , criterion
    , hstream-store
    , optparse-applicative  ^>=0.16
    , Z-Data
    , Z-IO

  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnliftedFFITypes

  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N

benchmark hstore-bench-append-batch
  import:             shared-properties
  type:               exitcode-stdio-1.0
  main-is:            AppendBatchBench.hs
  hs-source-dirs:     bench
  build-depends:
    , base                  >=4.11  && <5
    , bytestring
    , byteunits             ^>=0.4
    , criterion
    , hstream-store
    , optparse-applicative  ^>=0.16
    , Z-Data
    , Z-IO

  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnliftedFFITypes

  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N

benchmark hstore-bench-stream
  import:           shared-properties
  type:             exitcode-stdio-1.0
  main-is:          StreamBench.hs
  hs-source-dirs:   bench
  build-depends:
    , base                  >=4.11    && <5
    , bytestring
    , byteunits             ^>=0.4
    , criterion
    , hstream-store
    , optparse-applicative  ^>=0.16
    , unordered-containers  ^>=0.2.19
    , Z-Data
    , Z-IO

  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable hstore-bench-writter
  import:           shared-properties
  main-is:          writeBench.hs
  hs-source-dirs:   app
  build-depends:
    , async
    , base
    , bytestring
    , containers
    , data-default
    , hstream-store
    , optparse-applicative  ^>=0.16
    , random
    , Z-Data
    , Z-IO

  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
